# pm

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile
backend/: AGENTS.md  pyproject.toml
backend/app/: ai.py  ai_board.py  db.py  main.py
backend/tests/: conftest.py  test_ai_board_updates.py  test_ai_connectivity.py  test_auth.py  test_board_api.py
docs/: DB_SCHEMA.md  PLAN.md  code_review.md
frontend/: AGENTS.md  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/src/app/: page.tsx
frontend/src/components/: AuthApp.test.tsx  AuthApp.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx
frontend/src/lib/: kanban.ts
frontend/tests/: kanban.spec.ts
scripts/: AGENTS.md  start-linux.sh  start-mac.sh  start-windows.ps1  stop-linux.sh  stop-mac.sh  stop-windows.ps1
